[package]
name = "uefi_allocator"
version = "1.0.1"
edition = "2021"
readme = "README.md"
description = "Allocation services for the dxe_core and registered components."
license.workspace = true
repository.workspace = true

[lib]
name = "uefi_allocator"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi_gcd = {workspace=true}
linked_list_allocator = {workspace=true}
mu_pi = {workspace=true}
r-efi = {workspace=true}
uefi_tpl_lock = {workspace=true}
