[package]
name = "uefi_collections"
version = "5.0.0"
edition = "2021"
readme = "README.md"
description = "Collection types to the dxe_core."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
log = { workspace=true }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }
uint = { workspace = true }

[[bench]]
name = "bench_add"
harness = false

[[bench]]
name = "bench_search"
harness = false

[[bench]]
name = "bench_delete"
harness = false
