[package]
name = "uefi_collections"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
readme = "README.md"
description = "Collection types to the DXE Core."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
log = { workspace=true }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }
uint = { workspace = true }

[[bench]]
name = "bench_add"
harness = false

[[bench]]
name = "bench_search"
harness = false

[[bench]]
name = "bench_delete"
harness = false
