[package]
name = "uefi_component_interface"
version = "2.0.2"
edition = "2021"
readme = "README.md"
description = "The trait interface any dxe component should implement to be executed by the DXE Core."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r-efi = { workspace = true }
uefi_sdk = { workspace = true }
