[package]
name = "uefi_component_interface"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
readme = "README.md"
description = "The trait interface any DXE component should implement to be executed by the DXE Core."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r-efi = { workspace = true }
uefi_sdk = { workspace = true }
