[package]
name = "uefi_depex"
version = "6.1.0"
edition = "2021"
readme = "README.md"
description = "A Depex parsing implementation for the dxe_core."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uefi_depex"
path = "src/lib.rs"

[dependencies]
r-efi = {workspace=true}
uuid = {workspace=true}
log = { workspace = true }
