[package]
name = "uefi_depex"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
readme = "README.md"
description = "A dependency expression (depex) parsing implementation for the DXE Core."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uefi_depex"
path = "src/lib.rs"

[dependencies]
r-efi = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
