[package]
name = "uefi_device_path"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
readme = "README.md"
description = "A device path parsing implementation for the DXE Core."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uefi_device_path"
path = "src/lib.rs"

[dependencies]
r-efi = { workspace = true }
