[package]
name = "uefi_event"
version = "2.0.2"
edition = "2021"
readme = "README.md"
description = "An Event services implementation for the dxe_core."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uefi_event"
path = "src/lib.rs"

[dependencies]
r-efi = { workspace = true }
uefi_tpl_lock = { workspace = true }
log = { workspace = true }

[dependencies.uuid]
default-features = false
version = "1"

[features]
nightly = []
