[package]
name = "uefi_gcd"
version = "0.1.9"
edition = "2021"
readme = "README.md"
description = "A Global Coherency Domain (GCD) implementation for the dxe_core."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uefi_gcd"
path = "src/lib.rs"

[dependencies]
mu_pi = {workspace=true}
mu_rust_helpers = {workspace=true}
r-efi = {workspace=true}
uefi_tpl_lock = {workspace=true}
uefi_collections = {workspace=true}
log = {workspace=true}

[dev-dependencies]
uefi_collections = { workspace = true, default-features = true }