[package]
name = "uefi_pecoff"
version = "2.0.2"
edition = "2021"
readme = "README.md"
description = "A PE/COFF parsing implementation for the dxe_core."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "uefi_pecoff"
path = "src/lib.rs"

[dependencies]
goblin = {workspace = true}
scroll = {workspace = true}